<resources>
    <string name="app_name">Gamves Parents</string>

    <string name="title_home">Home</string>

    <string name="title_activity">Activity</string>

    <string name="title_account">Account</string>

    <!-- Cast Strings -->
    <string name="cast_app_id">0123456789</string>
    <string name="play_video">Play Video</string>
    <string name="pause_video">Pause Video</string>
    <string name="resume_video">Resume Video</string>
    <string name="video_title">Chromecast Video</string>
    <string name="content_type_mp4">video/mp4</string>

    <string name="title_proyecto">Gamves Parents</string>

    <string name="btn_link_signup">No tenes una cuenta, Registrate</string>

    <string name="title_register_actitivy">Registración de usuario</string>

    <string name="bt_vigilant_map">Ubicacion</string>

    <string name="language_0" translatable="false">All</string>
    <string name="language_1" translatable="false">7N6FmcRutH</string>
    <string name="language_2" translatable="false">bmG2qv6jPX</string>

    <string name="language_name_0" translatable="false">All</string>
    <string name="language_name_1" translatable="false">English</string>
    <string name="language_name_2" translatable="false">Spanish</string>

    <string name="loading_dialog_capture_description">Preparing capture&#8230;</string>

    <string name="your_daily_feed">YOUR DAILY FEED</string>

    <string name="snack_close">CLOSE</string>

    <!--SUSCRIPTION-->
    <string name="hint_password">Password</string>
    <string name="hint_user">User name</string>
    <string name="hint_email">Email</string>
    <string name="hint_school">School</string>
    <string name="btn_login">Login</string>

    <string name="child_image">Child Image</string>
    <string name="pick_image_for_child">Pick up an image of your child</string>
    <string name="pick_image_by_add_button">By touching the (+) button add the image</string>
    <string name="select_child_image">Select child image</string>

    <string name="register_message">Please ask your parents for registration credentials and come back. They should register first in order to give you access.</string>

    <string name="login_segmented_button">Login</string>
    <string name="register_segmented_button">Register</string>

</resources>
